envoy.yaml
admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001

static_resources:
  listeners:
    - name: edge|8080
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: edge
                codec_type: auto
                route_config:
                  name: edge
                  virtual_hosts:
                    - name: "sse-demo"
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/index.html"
                          route:
                            cluster: helloworld
                        - match:
                            prefix: "/sse/"
                          route:
                            prefix_rewrite: "/"
                            cluster: sse-backend-non-tls
                            timeout: 0s
                        - match:
                            prefix: "/sse-with-tls/"
                          route:
                            prefix_rewrite: "/"
                            cluster: sse-backend-with-tls
                            timeout: 0s
                  request_headers_to_add:
                    - header:
                        key: x-my-custom-header
                        value: "1234576"
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
    - name: edge|8443
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8443
      filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                alpn_protocols: ["h2,http/1.1"]
                tls_params: {}
                tls_certificates:
                  - certificate_chain:
                      filename: /etc/certs/tls.crt
                    private_key:
                      filename: /etc/certs/tls.key
          filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: edge
                codec_type: auto
                route_config:
                  name: edge
                  virtual_hosts:
                    - name: "sse-demo"
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/index.html"
                          route:
                            cluster: helloworld
                        - match:
                            prefix: "/sse/"
                          route:
                            prefix_rewrite: "/"
                            cluster: sse-backend-non-tls
                            timeout: 0s
                        - match:
                            prefix: "/sse-with-tls/"
                          route:
                            prefix_rewrite: "/"
                            cluster: sse-backend-with-tls
                            timeout: 0s
                  request_headers_to_add:
                    - header:
                        key: x-my-custom-header
                        value: "1234576"
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
  clusters:
    - name: sse-backend-non-tls
      connect_timeout: 3.00s
      type: LOGICAL_DNS
      lb_policy: round_robin
      http_protocol_options: {}
      load_assignment:
        cluster_name: sse-backend-non-tls
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: sse-backend-non-tls
                      port_value: 8080
    - name: sse-backend-with-tls
      connect_timeout: 3.00s
      type: LOGICAL_DNS
      lb_policy: round_robin
      http2_protocol_options: {}
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          common_tls_context:
            alpn_protocols: ["h2,http/1.1"]
            tls_certificates:
              - certificate_chain:
                  filename: /etc/certs/tls.crt
                private_key:
                  filename: /etc/certs/tls.key
      load_assignment:
        cluster_name: sse-backend-with-tls
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: sse-backend-with-tls
                      port_value: 8081
    - name: helloworld
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: helloworld
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: helloworld-service
                      port_value: 8080
